# tp_decent_course

./: CMakeLists.txt  README.md
cmake/: ClangTidy.cmake
cmake/toolchain/: auxiliary.cmake  host_clang-10.cmake  host_gcc_default.cmake
hw1/: CMakeLists.txt  README.md
hw1/include/: generator.h
hw1/src/: generator.cpp  main.cpp
hw1/tests/: short.suit.txt
